Abstracted the api keys from the project

--- a/.gitignore
+++ b/.gitignore
@@ -811,5 +811,8 @@ $RECYCLE.BIN/
 
 # HelpContext.cs
 
+#appsettings.Development.json
+
+
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,v
