made changes to appsettings

--- a/Help_FinalProject/appsettings.json
+++ b/Help_FinalProject/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Key": {
+    "RealEstateAPIKey": "c72fc9171dmsh499b226c1056bb8p17164ejsnb7b09d52ab49"
+  }
 }
