--- a/Help_FinalProject/appsettings.json
+++ b/Help_FinalProject/appsettings.json
@@ -5,7 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Key": {
-    "RealEstateAPIKey": "c72fc9171dmsh499b226c1056bb8p17164ejsnb7b09d52ab49"
-  }
+  "AllowedHosts": "*"
 }
