--- a/Help_FrontEnd/package.json
+++ b/Help_FrontEnd/package.json
@@ -15,10 +15,17 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/google-maps": "^16.1.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@types/googlemaps": "^3.43.3",
+    "@types/leaflet": "^1.9.3",
     "bootstrap": "^5.3.0",
+    "leaflet": "^1.9.4",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
