--- a/Help_FinalProject/appsettings.Development.json
+++ b/Help_FinalProject/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Key": {
+    "RealEstateAPIKey": "c72fc9171dmsh499b226c1056bb8p17164ejsnb7b09d52ab49"
   }
 }
