--- a/.gitignore
+++ b/.gitignore
@@ -809,9 +809,7 @@ $RECYCLE.BIN/
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# HelpContext.cs
-
-#appsettings.Development.json
+Secrets.cs
 
 
 
