--- a/.gitignore
+++ b/.gitignore
@@ -809,7 +809,7 @@ $RECYCLE.BIN/
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-**/Secrets.cs
+**/Secret.cs
 
 index.html
 
