--- a/Help_FrontEnd/package.json
+++ b/Help_FrontEnd/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
-    "@ng-bootstrap/ng-bootstrap": "15.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "@popperjs/core": "^2.11.8",
     "@types/googlemaps": "^3.43.3",
     "@types/leaflet": "^1.9.3",
